--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "animate.css": "^4.1.1"
+        "animate.css": "^4.1.1",
+        "flowbite": "^3.1.2"
     }
 }
