--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
     "version": 2,
-    "builds": [
-        { "src": "public/**/*", "use": "@vercel/static" },
-        { "src": "api/**/*.php", "use": "vercel-php@0.6.0" }
-    ],
-    "routes": [
-        { "src": "/(.*)", "dest": "public/index.php" }
-    ]
+    "framework": null,
+    "functions": {
+        "api/index.php": { "runtime": "vercel-php@0.6.0" }
+    },
+    "routes": [{
+        "src": "/(.*)",
+        "dest": "/api/index.php"
+    }],
+    "env": {
+        "APP_ENV": "local",
+        "APP_DEBUG": "true",
+        "APP_URL": "https://cikopimangeko.com"
+    }
 }
