--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
             "src": "public/index.php",
-            "use": "vercel-php@0.6.0",
+            "use": "@juicyfx/vercel-php@2.0.1",
             "config": {
                 "php": "8.2"
             }
